--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -216,6 +216,12 @@
             android:screenOrientation="portrait"/>
 
         <activity
+            android:name=".activity.MainNewActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:label="@string/login_register"
+            android:screenOrientation="portrait"/>
+
+        <activity
             android:name=".activity.ChatActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:screenOrientation="portrait"
@@ -472,6 +478,14 @@
         </activity>
 
         <activity
+            android:name=".activity.FeedBackNewActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:label="@string/feed_back"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
             android:name=".activity.PersonalVideoActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:label="@string/personal_info"
@@ -541,6 +555,32 @@
             android:label="@string/bangding_phone"
             android:screenOrientation="portrait">
         </activity>
+
+        <activity
+            android:name=".activity.ContactInfoActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:label="@string/personal_info"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".activity.ModifyUserInfoNewActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:label="@string/modify_info"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".activity.DownloadExpressionActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:label="@string/sticker_market"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".activity.ExpressionActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:label="@string/sticker_market"
+            android:screenOrientation="portrait"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
